@@ -4,6 +4,8 @@ Changelog
 1.0 (unreleased)
 ------------------
 
+- Use label text as placeholder for site search in Bootstrap.
+  [davidjb]
 - Fix typo for rule for manage portlets rule in Bootstrap.
   [davidjb]
 - Ensure relative paths are used for Plone logo resources for correct
